--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -1,5 +1,7 @@
 %h1 This is the home page
 
+=link_to "Add a repo", new_repo_path
+
 .progress.alert{:class => "[small-# large-#] [secondary success] [radius round]"}
   %span.meter{:style => "width: #{number_to_percentage(@percent_complete, precision: 2)}"}
 
