--- a/app/views/layouts/_navigation.haml
+++ b/app/views/layouts/_navigation.haml
@@ -12,4 +12,6 @@
     %ul.right
       -if user_signed_in?
         %li
+          =link_to "Add a repo", new_repo_path
+        %li
           =link_to 'Logout', destroy_user_session_path, :method=>'delete'
