Changes some other stuff don't care about the commit it's 3 AM

--- a/app/views/repos/_form.haml
+++ b/app/views/repos/_form.haml
@@ -1,4 +1,5 @@
 =simple_form_for @repo do |f|
   =f.input :name, collection: @repo_list
   =f.input :weekly_goal, as: :string
-  =f.button :submit
+  =f.button :submit, class: 'button'
+  =link_to "Cancel", authenticated_root_path, class: 'button'
