Styles home page a little

--- a/app/views/static/index.haml
+++ b/app/views/static/index.haml
@@ -8,17 +8,7 @@
     = csrf_meta_tags
   %body
     %main{:role => "main"}
-      .large-6.large-centered.columns
-        %h1{:style => "text-align:center;"} Velocity
-        .authform
-          = simple_form_for(resource, as: resource_name, url: session_path(resource_name)) do |f|
-            = devise_error_messages!
-            %h4 Speed up your workflow
-            = f.input :email, :autofocus => true, class: 'form-control'
-            = f.input :password, class: 'form-control'
-            = f.input :remember_me, as: :boolean if devise_mapping.rememberable?
-            = f.submit 'Sign in', :class => 'button tiny'
-            OR
-            =link_to "Need an account?", new_user_registration_path, :class => 'button tiny'
-
-    =link_to "Sign in with github", user_omniauth_authorize_path(:github)
+      .large-6.large-centered.columns.text-center.big-login
+        %h1 Velocity
+        %h3 Track your speed
+        =link_to "Sign in with github", user_omniauth_authorize_path(:github), class: 'button'
